@@ -5,6 +5,7 @@ import com.google.gson.JsonParser;
 
 import java.io.IOException;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.util.Scanner;
 
@@ -13,7 +14,7 @@ public class CurrencyConverter {
     public static double convertVndToUsd(double amountVnd, String apiKey) throws IOException {
         String urlString = "https://v6.exchangerate-api.com/v6/" + apiKey + "/latest/VND";
 
-        URL url = new URL(urlString);
+        URL url = URI.create(urlString).toURL();
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.setRequestMethod("GET");
 
